--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,6 +5,11 @@ html {
 }
 
 .container {
+  display: grid;
+  column-gap: 15px;
+  row-gap: 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -21,10 +26,12 @@ html {
 }
 
 .header {
+  grid-column: 1 / -1;
   background-color: #006157;
 }
 
 .sidebar {
+  grid-row: span 2;
   background-color: #005B94;
 }
 
@@ -33,10 +40,12 @@ html {
 }
 
 .article {
+  grid-column: 2;
   background-color: #7E1DC3;
 }
 
 .footer {
+  grid-column: 1 / -1;
   background-color: #393f4d;
 }
 
