--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -19,6 +19,10 @@
   background-color: #393f4d;
 }
 
+.full-width{
+  grid-column: 1/-1;
+}
+
 .menu ul,
 .menu li {
   font-size: 16px;
@@ -88,4 +92,55 @@
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+
+/*SOLUTION*/
+
+.container{
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto auto 100% auto;
+  gap: 4px;
+}
+
+ul{
+  display: grid; 
+  grid-auto-flow: column;
+  grid-template-columns: repeat(3, 1fr);
+  list-style:  none;
+}
+
+.header{
+  grid-row: 1 / 2;
+  grid-column: 1/ -1;
+  display: grid; 
+  grid-template-columns: 1fr 4fr;
+  align-items:center;
+}
+
+.header .logo{
+  display: grid;
+  min-width: max-content;
+}
+
+
+.article{
+  grid-column: 2;
+  display: grid; 
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+}
+
+.sidebar{
+  display: grid; 
+  gap: 32px; 
+  grid-row: span 2;
+}
+
+
+.sidebar div {
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
